:zap: Integration image slider

--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -4,5 +4,7 @@
   "job": "a software developer/tester",
   "location": "located in Ho Chi Minh - Viet Nam",
   "yoe": "years of experience",
-  "contactMe": "Contact Tien"
+  "contactMe": "Contact Tien",
+  "latestProjects": "Latest projects",
+  "cert": "Certifications"
 }
