--- a/src/locales/vi/home.json
+++ b/src/locales/vi/home.json
@@ -4,5 +4,7 @@
   "job": "một thanh niên lập trình và kiểm thử phần mềm",
   "location": "sống tại thành phố Hồ Chí Minh - Việt Nam",
   "yoe": "Năm kinh nghiệm",
-  "contactMe": "Liên hệ tôi"
+  "contactMe": "Liên hệ tôi",
+  "latestProjects": "Các dự án nhỏ gần đây",
+  "cert": "Chứng chỉ"
 }
